// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-ratio> Component <bolt-ratio> compiles 1`] = `
<bolt-ratio ratio="20/11">
  <ssr-keep for="bolt-ratio"
            class="c-bolt-ratio"
            style="padding-bottom: calc((11 / 20) * 100%); --aspect-ratio: 1.8181818181818;"
  >
    <img src="/fixtures/1200x660.jpg">
  </ssr-keep>
</bolt-ratio>
`;

exports[`<bolt-ratio> Component <bolt-ratio> twig - ratio prop fraction containing a decimal 1`] = `
<bolt-ratio ratio="12/8.5">
  <ssr-keep for="bolt-ratio"
            class="c-bolt-ratio"
            style="padding-bottom: calc((8.5 / 12) * 100%); --aspect-ratio: 1.4117647058824;"
  >
    <img src="/fixtures/1200x850-alt.jpg">
  </ssr-keep>
</bolt-ratio>
`;

exports[`<bolt-ratio> Component <bolt-ratio> web component - ratio prop fraction containing a decimal 1`] = `
<bolt-ratio ratio="12/8.5">
  <img src="/fixtures/1200x850.jpg">
</bolt-ratio>
`;

exports[`<bolt-ratio> Component <bolt-ratio> with HTML5 video renders 2`] = `
<bolt-ratio ratio="640/360"
            style="width: 640px;"
>
  <video controls
         poster="/fixtures/videos/poster.png"
  >
    <source src="/fixtures/videos/devstories.webm"
            type="video/webm;codecs=&quot;vp8, vorbis&quot;"
    >
    <source src="/fixtures/videos/devstories.mp4"
            type="video/mp4;codecs=&quot;avc1.42E01E, mp4a.40.2&quot;"
    >
    <track src="/fixtures/videos/devstories-en.vtt"
           label="English subtitles"
           kind="subtitles"
           srclang="en"
           default
    >
  </video>
</bolt-ratio>
`;

exports[`<bolt-ratio> Component Default <bolt-ratio> w/o Shadow DOM renders 1`] = `
<bolt-ratio no-shadow
            ratio="1200/660"
>
  <div class="c-bolt-ratio"
       style="--aspect-ratio:1.81818;"
  >
    <img src="/fixtures/1200x660.jpg">
  </div>
</bolt-ratio>
`;
